<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_appTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        app:cardCornerRadius="8sp"
        android:elevation="4dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_welcome"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="#363A43"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_enterYourName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_your_name"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="#7A8089"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNameInputHolder"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_input_hint"
            android:inputType="textCapWords"
            android:textColor="#363A43"
            android:textColorHint="#7A8089"/>

    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/design_default_color_primary"
            android:text="@string/startBtnText"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>